Fix image block wrapping

--- a/assets/css/views/_images.scss
+++ b/assets/css/views/_images.scss
@@ -323,3 +323,8 @@ span.spoiler div.image-container {
 .image_source__icon {
   justify-self: center;
 }
+
+.js-resizable-media-container {
+  display: flex;
+  flex-wrap: wrap;
+}
